# vjemmie

./: .gitignore  Dockerfile.api  Dockerfile.bot  LICENSE  Pipfile  README.md  TODO.md  bot.py  botsecrets_example.py  config.py  docker-compose.yml  events_module.py  example.py  ext_module.py  pfmalexa.py  pfmbot.py  pyproject.toml  req.sh  requirements.txt  run.py  run_example.py  secrets_example.py  testbot.py
.devcontainer/: devcontainer.json
cogs/: __init__.py  admin_cog.py  admin_utils.py  autochess_cog.py  avatar_cog.py  base_cog.py  botsetup_cog.py  cod_cog.py  db_cog.py  dgvgk_cog.py  experimental_cog.py  ext_module.py  fryer.py  frying_cog.py  fun_cog.py  image_cog.py  mac_pubg_cog.py  management_cog.py  meme_cog.py  pfm_memes_cog.py  pubg_cog.py  react_cog.py  reddit_cog.py  serialsound_cog.py  sound_cog.py  soundbomb_cog.py  stats_cog.py  test_cog.py  testing_cog.py  twitter_cog.py  underlords_cog.py  user_cog.py  video_cog.py  war3_cog.py  weather_cog.py  wowprogress_cog.py  youtube_cog.py
db/: vjemmie.db.sql
dbInit/: vjemmie.sql
deepfryer/: fryer.py
ext/: checks.py  converters.py
memes/: psio.txt
memes/txt/: brokenlenny.txt  goodshit.txt  mason.txt  psio.txt
tests/: test_cog.py
utils/: access_control.py  argsparsing.py  caching.py  checks.py  converters.py  datetimeutils.py  exceptions.py  experimental.py  ext_models.py  ext_utils.py  filetypes.py  messaging.py  parsing.py  serialize.py  spotify.py  users.py  youtube.py
utils/patching/: commands.py
vjemmie/: __init__.py  bot.py  config.py  testbot.py
vjemmie/cogs/: __init__.py  admin_cog.py  autochess_cog.py  avatar_cog.py  base_cog.py  botsetup_cog.py  dgvgk_cog.py  experimental_cog.py  fun_cog.py  image_cog.py  management_cog.py  meme_cog.py  pubg_cog.py  reddit_cog.py  sound_cog.py  stats_cog.py  twitter_cog.py  underlords_cog.py  user_cog.py  video_cog.py  weather_cog.py  wow_cog.py  wowprogress_cog.py  youtube_cog.py
vjemmie/db/: __init__.py  db.py  models.py
vjemmie/deepfryer/: __init__.py  fryer.py
vjemmie/ladder/: __init__.py
vjemmie/tests/: test_cog.py  test_vjemmie.py
vjemmie/utils/: access_control.py  caching.py  checks.py  commands.py  converters.py  datetimeutils.py  exceptions.py  experimental.py  ext_models.py  filesystem.py  filetypes.py  wsl.py  (+12 more)
(+3 files in other folders)
