[tool.poetry]
name = "vjemmie"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["PederHA <peder.andresen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
praw = "^6.5.1"
numpy = "^1.18.1"
youtube_dl = "^2020.3.24"
gtts = "^2.1.1"
xmltodict = "^0.12.0"
pillow = "^7.0.0"
geopy = "^1.21.0"
pynacl = "^1.3.0"
trueskill = "^0.4.5"
pathvalidate = "^2.2.0"
recordclass = "^0.13.2"
urllib3 = "^1.25.8"
pygithub = "^1.46"
requests-html = "^0.10.0"
markovify = "^0.8.0"
psutil = "^5.6.7"
beautifulsoup4 = "^4.8.2"
ciso8601 = "^2.1.3"
websockets = "^8.1"
spotipy = "^2.9.0"
google-api-python-client = "^1.7.11"
pytesseract = "^0.3.2"
python-magic = "^0.4.15"
unidecode = "^1.1.1"
mcstatus = "^2.3.0"
discord-py = "^1.3.1"
mwthesaurus = "^0.1.2"
httpx = "^0.13.3"
aiofile = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
mypy = "^0.780"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
